--- a/Mapping/templates/index.html
+++ b/Mapping/templates/index.html
@@ -35,10 +35,10 @@
                 </ul>
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="state.html">State Brewery Data</a>
+                        <a class="nav-link" href="/state">State Brewery Data</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nc_breweries.html">Find a Brewery</a>
+                        <a class="nav-link" href="/nc_breweries">Find a Brewery</a>
                     </li>
                 </ul>
             </div>
