--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,10 @@
 
         <!-- Chart source file -->
         <script type="text/javascript" src="Home_charts.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
 
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+        <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
 
 
