--- a/Mapping/templates/index.html
+++ b/Mapping/templates/index.html
@@ -7,14 +7,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
             integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-        <!-- <style>
-            body {
-                background: url("../clear-blue-sky-2.jpg");
-                background-size: cover;
-                background-blend-mode: lighten;
-            }
-        </style>
-    -->
+
+        <script src="{{ url_for('static', filename='js/index_charts.js') }}"></script>
 
     </head>
 
@@ -124,8 +118,8 @@
         <script src="https://d3js.org/d3.v4.js"></script>
 
         <!-- Chart source file -->
-        <!-- <script type="text/javascript" src="../../Mapping/static/js/logic1.js"></script> -->
-        <script type="text/javascript" src="static/js/Home_charts.js"></script>
+        <!-- <script type="text/javascript" src="../static/js/index_charts.js"></script> -->
+        <script src="{{ url_for('static', filename='js/index_charts.js') }}"></script>
 
 
 
